--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,16 @@ JWT_REFRESH_SECRET=<your-jwt-refresh-secret>
 JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=7d
 
+# PAYSTACK
+PAYSTACK_SECRET_KEY=<your-paystack-secret-key>
+
+
+# google auth
+GOOGLE_CLIENT_SECRET=<your-google-client-secret>
+GOOGLE_CLIENT_ID=<your-google-client-id>
+GOOGLE_CALLBACK_URL=http://localhost:<your-port>/api/v1/auth/google/callback
+APP_URL=http://localhost:<your-port>
+
 # API Key Configuration
 API_KEY_PREFIX=<your-api-key-prefix>
 
